[package]
name = "gpu-video"
version = "0.0.1"
edition = "2024"
authors = ["Adrian <adrian.eddy@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Library to decode and encode videos with focus on GPU"
repository = "https://github.com/AdrianEddy/gpu-video"
readme = "README.md"

[dependencies]
thiserror = "2"
log = "0.4"
simple-log = "2.4"
enum_dispatch = "0.3"
crc32fast = "1.5"
parking_lot = "0.12"
chrono = { version = "0.4", optional = true }
ffmpeg-next = { version = "8.0.0", git = "https://github.com/AdrianEddy/rust-ffmpeg/", rev = "ca9b4bc", optional = true, default-features = false, features = ["codec", "filter", "format", "software-resampling", "software-scaling"] }

braw = { git = "https://github.com/AdrianEddy/braw-rs/", optional = true }
r3d-rs = { git = "https://github.com/AdrianEddy/r3d-rs/", default-features = false, optional = true }
pollster = "0.4"

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies.metal]
version = "0.32.0"
[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies.objc-foundation]
version = "0.1.1"
[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.62"
features = [ "Win32_System_Com", "Win32_System_Console", "Win32_System_SystemServices", "Win32_UI_Shell", "Win32_Foundation",
             "Win32_Graphics_Dwm", "Win32_Graphics_Direct3D", "Win32_Graphics_Direct3D9", "Win32_Graphics_Direct3D11", "Win32_Graphics_Dxgi_Common", "Win32_Graphics_Dxgi", "Win32_Security" ]

[features]
default = ["link-libs"]
link-libs = ["r3d-rs/link"]
ffmpeg = ["dep:ffmpeg-next", "dep:chrono"]
braw = ["dep:braw"]
r3d = ["dep:r3d-rs"]

[lib]
name = "gpu_video"
path = "src/lib.rs"

[[bin]]
name = "gpu_video"
path = "src/bin.rs"
